# ragit

./: .gitignore  README.md  pyproject.toml
data/Nam-Phong/Quyen-1/So-1/context/: so1_context.csv
data/Nam-Phong/Quyen-1/So-1/gold/: namphong_so1_gold.json
data/Nam-Phong/Quyen-1/So-1/lexicon/: so1_definitions.csv
data/Nam-Phong/Quyen-1/So-2/context/: so2_context.csv
data/Nam-Phong/Quyen-1/So-2/lexicon/: so2_definitions.csv
data/Tan-Viet/: Tan_Viet_metadata.csv
src/data-extraction/: extract_wikisource_content.py
src/data_extraction/: extract_wikisource_content.py
src/edition/: html_to_json.py  html_to_tei.py  img_document_to_json.py  models.py
src/ocr/: README.md  extract_trilingual_ocr_training_data.py  ocr_quality_report.py  ocr_vi_fr.py
src/rag/: README.md  document_builder.py  loader.py  main_pipeline.py  rag_wrapper.py  vector_indexer.py  wrapper.py
