[tool.poetry]
name = "ragit"
version = "0.1.0"
description = "Rag'it minimal bootstrap"
authors = [
    "Frédéric Saudemont <fs1510@gmail.com>",
    "Vy CAO <vy.cao@etu.univ-amu.fr>"
]
readme = "README.md"
packages = [
  { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = ">=2.2.3,<3.0.0"
pathlib = ">=1.0.1,<2.0.0"
requests = ">=2.32.3,<3.0.0"
bs4 = ">=0.0.2,<0.0.3"
loguru = ">=0.7.3,<0.8.0"
jiwer = "^3.1.0"
evaluate = "^0.4.3"
sentence-transformers = "^4.1.0"
faiss-cpu = "^1.11.0"
langchain = "^0.3.26"
langchain-community = "^0.3.26"
langchain-huggingface = "^0.3.0"
langchain-ollama = "^0.3.3"
pytesseract = "^0.3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
